# Seal_Recognition_app

./: .gitignore  README.md
fastapi/: models.py  pyproject.toml
fastapi_backend/: .dockerignore  .gitignore  README.md  dockerfile  main.py  pyproject.toml  test_onnx_run.py
fastapi_backend/my_utils/: functions.py
seal_recognition_app/: .gitignore  index.html  package-lock.json  package.json
seal_recognition_app/src/: App.jsx
seal_recognition_app/src/components/elements/: DetectionBtn.jsx  Header.jsx  Heading.jsx  ImgStoreBtn.jsx  Message.jsx  MethodList.jsx  ReadFiles.jsx  ShowDetects.jsx  UploadBtn.jsx
seal_recognition_app/src/components/pages/: Home.jsx
