[tool.poetry]
name = "fastapi_backend"
version = "0.1.0"
description = ""
authors = ["masato-210831 <b86500b@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
torchvision = "^0.17.1"
numpy = "^1.26.4"
torch = "^2.2.1"
onnxruntime = "^1.17.1"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
